--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -104,3 +104,50 @@ form button {
 form button:hover{
   background-color: #2fb86e;
 }
+
+.items-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 16px;
+}
+
+.items-grid li {
+  background-color: #f5f5f5;
+  list-style: none;
+  border: 2px solid #f5f5f5;
+  border-radius: 8px;
+  height: 180px;
+  padding: 32px 24px 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  cursor: pointer;
+}
+
+.items-grid li span {
+  flex: 1;
+  display:flex;
+  align-items: center;
+
+  color: var(--title-color);
+}
+
+/*
+* li.selected: juntos, siginifica que estamos selecionando um li que tem a classe selected.
+* se fosse separado li .selected: siginificaria que estamos procurando por um elemento contido dentro das tags li, que possui a classe selected
+*/
+.items-grid li.selected {
+  background: #e1faec;
+  border: 2px solid #34cb79;
+}
+
+/*
+* ajustar o target no click ser sempre o li todo e não somente a img e o texto
+*/
+.items-grid li img,
+.items-grid li span {
+  pointer-events: none;
+}
