--- a/src/views/index.html
+++ b/src/views/index.html
@@ -23,7 +23,7 @@
 
       <header>
         <img src="/assets/logo.svg" alt="Logomarca">
-        <a href="/create-point.html">
+        <a href="/create-point">
           <span></span>
           Cadastre um ponto de coleta
         </a>
@@ -44,7 +44,7 @@
         <h1>Pontos de Coleta</h1>
         <a href="#">Fechar</a>
       </div>
-      <form action="/search-result.html">
+      <form action="/search-result">
         <label for="search">Cidade</label>
         <div class="search field">
           <input type="text" name="search" placeholder="Pesquise por cidade">
