--- a/public/styles/create-point.css
+++ b/public/styles/create-point.css
@@ -1,37 +1,37 @@
 #page-create-point {
-  width: 90%;
+  width    : 90%;
   max-width: 1100px;
-  margin: 0 auto;
+  margin   : 0 auto;
 }
 
 #page-create-point header {
-  margin-top: 48px;
-  display: flex;
+  margin-top     : 48px;
+  display        : flex;
   justify-content: space-between;
-  align-items: center;
+  align-items    : center;
 }
 
 #page-create-point header a {
-  color: var(--title-color);
+  color      : var(--title-color);
   font-weight: bold;
-  display: flex;
+  display    : flex;
   align-items: center;
 }
 
 #page-create-point header a span {
-  margin-right: 16px;
+  margin-right    : 16px;
   background-image: url('../assets/arrow-left.svg');
-  display: flex;
-  width: 20px;
-  height: 24px;
+  display         : flex;
+  width           : 20px;
+  height          : 24px;
 }
 
 form {
   background-color: white;
-  margin: 80px auto;
-  padding: 64px;
-  border-radius: 8px;
-  max-width: 730px;
+  margin          : 80px auto;
+  padding         : 64px;
+  border-radius   : 8px;
+  max-width       : 730px;
 }
 
 form h1 {
@@ -40,22 +40,31 @@ form h1 {
 
 form fieldset {
   margin-top: 64px;
-  border: 0;
+  border    : 0;
 }
 
 form legend {
-  margin-bottom: 40px;
+  margin-bottom  : 40px;
+  display        : flex;
+  align-items    : center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 form legend h2 {
   font-size: 24px;
 }
 
+form legend span {
+  font-size: 14px;
+  color    : var(--title-color);
+}
+
 form .field {
-  flex: 1;
-  display: flex;
+  flex          : 1;
+  display       : flex;
   flex-direction: column;
-  margin-bottom: 24px;
+  margin-bottom : 24px;
 }
 
 form .field-group {
@@ -65,71 +74,71 @@ form .field-group {
 form input,
 form select {
   background-color: #f0f0f5;
-  border: 0;
-  padding: 16px 24px;
-  font-size: 16px;
-  border-radius: 8px;
+  border          : 0;
+  padding         : 16px 24px;
+  font-size       : 16px;
+  border-radius   : 8px;
 
   /* outline: none; */
 }
 
 form select {
   -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+  -moz-appearance   : none;
+  appearance        : none;
 }
 
 form label {
-  font-size: 14px;
+  font-size    : 14px;
   margin-bottom: 8px;
 }
 
-form .field-group .field + .field {
+form .field-group .field+.field {
   margin-left: 24px;
 }
 
 form button {
-  width: 260px;
-  height: 56px;
+  width           : 260px;
+  height          : 56px;
   background-color: var(--primary-color);
-  border-radius: 8px;
-  color: white;
-  font-weight: bold;
-  font-size: 16px;
-  border: 0;
-  margin-top:40px;
-  transition: background-color 400ms;
+  border-radius   : 8px;
+  color           : white;
+  font-weight     : bold;
+  font-size       : 16px;
+  border          : 0;
+  margin-top      : 40px;
+  transition      : background-color 400ms;
 }
 
-form button:hover{
+form button:hover {
   background-color: #2fb86e;
 }
 
 .items-grid {
-  display: grid;
+  display              : grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 16px;
+  grid-template-rows   : 1fr 1fr 1fr;
+  gap                  : 16px;
 }
 
 .items-grid li {
   background-color: #f5f5f5;
-  list-style: none;
-  border: 2px solid #f5f5f5;
-  border-radius: 8px;
-  height: 180px;
-  padding: 32px 24px 16px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  text-align: center;
-  cursor: pointer;
+  list-style      : none;
+  border          : 2px solid #f5f5f5;
+  border-radius   : 8px;
+  height          : 180px;
+  padding         : 32px 24px 16px;
+  display         : flex;
+  flex-direction  : column;
+  align-items     : center;
+  justify-content : space-between;
+  text-align      : center;
+  cursor          : pointer;
 }
 
 .items-grid li span {
-  flex: 1;
-  display:flex;
+  flex       : 1;
+  display    : flex;
   align-items: center;
 
   color: var(--title-color);
@@ -141,7 +150,7 @@ form button:hover{
 */
 .items-grid li.selected {
   background: #e1faec;
-  border: 2px solid #34cb79;
+  border    : 2px solid #34cb79;
 }
 
 /*
