--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -27,6 +27,14 @@
   #page-search-results .cards img {
     height: 250px;
   }
+
+  #page-create-point .field-group {
+    flex-direction: column;
+  }
+
+  #page-create-point .field-group .field+.field {
+    margin-left: 0;
+  }
 }
 
 /* qdo a largura da screen for > 1700px este style passa a ser aplicado */
