--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,63 +1,36 @@
-<!DOCTYPE html>
-<html lang="pt_br">
+{% extends "layout.html" %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ecoleta</title>
-  <link rel="icon" href="/assets/logo.svg">
+{% set pageId = "page-home" %}
 
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+{% block styles %}
+<link rel="stylesheet" href="/styles/home.css">
+<link rel="stylesheet" href="/styles/modal.css">
+{% endblock styles %}
 
-  <link rel="stylesheet" href="/styles/main.css">
-  <link rel="stylesheet" href="/styles/home.css">
-  <link rel="stylesheet" href="/styles/responsive.css">
-  <link rel="stylesheet" href="/styles/modal.css">
+{% block content %}
+<div class="content">
+  <header>
+    <img src="/assets/logo.svg" alt="Logomarca">
+    <a href="/create-point">
+      <span></span>
+      Cadastre um ponto de coleta
+    </a>
+  </header>
 
-</head>
+  <main>
+    <h1>Seu marketplace de coleta de resíduos</h1>
 
-<body>
+    <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente.</p>
 
-  <div id="page-home">
-    <div class="content">
+    <a href="#"><span></span><strong>Pesquisar pontos de coleta</strong></a>
+  </main>
+</div>
+{% endblock content %}
 
-      <header>
-        <img src="/assets/logo.svg" alt="Logomarca">
-        <a href="/create-point">
-          <span></span>
-          Cadastre um ponto de coleta
-        </a>
-      </header>
+{% block modal %}
+{% include "partials/modal.html" %}
+{% endblock modal %}
 
-      <main>
-        <h1>Seu marketplace de coleta de resíduos</h1>
-        <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente.</p>
-        <a href="#"><span></span><strong>Pesquisar pontos de coleta</strong></a>
-      </main>
-
-    </div>
-  </div>
-
-  <div id="modal" class="hide">
-    <div class="content">
-      <div class="header">
-        <h1>Pontos de Coleta</h1>
-        <a href="#">Fechar</a>
-      </div>
-      <form action="/search-result">
-        <label for="search">Cidade</label>
-        <div class="search field">
-          <input type="text" name="search" placeholder="Pesquise por cidade">
-          <button>
-            <img src="/assets/search.svg" alt="Buscar">
-          </button>
-        </div>
-      </form>
-    </div>
-  </div>
-
-  <script src="/scripts/index.js"></script>
-
-</body>
-
-</html>
+{% block scripts %}
+<script src="/scripts/index.js"></script>
+{% endblock scripts %}
