--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -1,12 +1,12 @@
 #modal {
   background-color: #0E0A14ef;
   height: 100vh;
-  width: 100vw;
+  width : 100vw;
   position: fixed;
-  top: 0;
-  display: flex;
+  top     : 0;
+  display        : flex;
   justify-content: center;
-  align-items: center;
+  align-items    : center;
   transition: 400ms;
 }
 
@@ -21,15 +21,15 @@
 }
 
 #modal .header {
-  display: flex;
-  align-items: center;
+  display        : flex;
+  align-items    : center;
   justify-content: space-between;
   margin-bottom: 48px
 }
 
 #modal .header a {
   background-image: url("../assets/x.svg");
-  width: 20px;
+  width : 20px;
   height: 20px;
   display: flex;
   font-size: 0.01px;
@@ -37,14 +37,14 @@
 
 #modal .header h1 {
   color: white;
-  font-size: 36px;
+  font-size  : 36px;
   line-height: 42px;
 }
 
 #modal form label {
-  font-size: 14px;
+  font-size  : 14px;
   line-height: 16px;
-  display: block;
+  display      : block;
   margin-bottom: 8px;
 }
 
@@ -56,20 +56,32 @@
   flex: 1;
   background-color: #f0f0f5;
   border-radius: 8px 0 0 8px;
-  border: 0;
+  border       : 0;
   padding: 16px 24px;
   font-size: 16px;
-  color: #6c6c80;
+  color    : #6c6c80;
 }
 
 #modal form button {
-  width: 72px;
+  width : 72px;
   height: 72px;
   background-color: var(--primary-color);
-  border: 0;
+  border       : 0;
   border-radius: 0 8px 8px 0;
 }
 
 #modal form button:hover {
   background-color: #2fb85e;
+}
+
+/* Isto é para o modal point created */
+#modal.point .content {
+  display       : flex;
+  flex-direction: column;
+  align-items   : center;
+}
+
+#modal.point h1 {
+  color: white;
+  margin-top: 32px;
 }
